--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,14 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+;;files to ignore
+settings.py
+
+;;extensions to ignore
+*.log
+*.pot
+*.pyc
+
+;;directories to ignore
+.idea/
