--- a/frontend/csyllabus/package.json
+++ b/frontend/csyllabus/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "@angular/animations": "^4.0.0",
     "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^4.0.0",
+    "@angular/common": "^4.4.6",
     "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
+    "@angular/compiler-cli": "^4.4.6",
+    "@angular/core": "^4.4.6",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/material": "^2.0.0-beta.12",
