--- a/frontend/csyllabus/src/tsconfig.app.json
+++ b/frontend/csyllabus/src/tsconfig.app.json
@@ -4,9 +4,11 @@
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
     "module": "es2015",
+    "moduleResolution": "node",
     "types": []
   },
   "exclude": [
+    "node_modules",
     "test.ts",
     "**/*.spec.ts"
   ]
