--- a/frontend/csyllabus/package.json
+++ b/frontend/csyllabus/package.json
@@ -18,6 +18,7 @@
     "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.4.6",
     "@angular/core": "^4.4.6",
+    "@angular/flex-layout": "^2.0.0-beta.10-4905443",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/material": "^2.0.0-beta.12",
