--- a/frontend/csyllabus/package.json
+++ b/frontend/csyllabus/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "3": "^2.0.0",
     "@angular/animations": "^4.0.0",
     "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.4.6",
@@ -24,8 +25,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular4-social-login": "^1.0.13",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "ngx-sharebuttons": "^3.0.0",
     "rxjs": "^5.1.0",
+    "version": "^0.1.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
