one course page

--- a/frontend/csyllabus/package.json
+++ b/frontend/csyllabus/package.json
@@ -25,9 +25,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular4-fusioncharts": "^1.0.0",
     "angular4-social-login": "^1.0.13",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "fusioncharts": "^3.12.2",
     "ngx-sharebuttons": "^3.0.0",
     "rxjs": "^5.1.0",
     "version": "^0.1.2",
