docker backend similarity done

--- a/docker-common.yml
+++ b/docker-common.yml
@@ -21,3 +21,4 @@ services:
             dockerfile: ./docker/web/Dockerfile
         volumes:
             - .:/django
+            - ./docker/django/similarity.py:/docker/django/similarity.py
